--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+* {
+  margin: 5px;
+  padding: 0;
+  font-family: 'Space Mono';
+  /* border: 1px solid grey; */
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +12,63 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  width: 80%;
+  margin: 0 auto;
+  height: 100vh;
+  margin-top: 1em;
+}
+
+.header {
+  border: 2px solid darkslategray;
+  border-radius: 10px;
+  color: darkslategray;
+  padding: 0.5em;
+}
+
+.subheader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  letter-spacing: -0.1em;
+}
+
+.btn {
+  margin-right: 1em;
+  padding: 0.5em 1em;
+  border-radius: 15px;
+}
+
+.btn:hover {
+  cursor: pointer;
+  background-color: darkslategray;
+  color: white;
+}
+
+input:not(:last-of-type) {
+  width: 96%;
+}
+
+input:last-of-type {
+  height: 1em;
+}
+
+.note {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid darkslategray;
+  border-radius: 10px;
+  letter-spacing: 0.3em;
+}
+
+h3 {
+  display: flex;
 }
